--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Employment Form</title>
+  <title>Employee Registration Form</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -14,316 +14,97 @@
     </div>
 
     <form id="multiStepForm">
-      <!-- All form sections are added here -->
-      <!-- I will include all 10 sections in a follow-up message to avoid length cutoff -->
-
-<!-- SECTION 1: Personal Particulars -->
-<div class="form-section active">
-  <h2>Personal Particulars</h2>
-
-  <label>Full Name *</label>
-  <input type="text" name="fullName" required />
-
-  <label>Date of Birth *</label>
-  <input type="date" name="dob" required />
-
-  <label>Age *</label>
-  <input type="number" name="age" required />
-
-  <label>Gender *</label>
-  <select name="gender" required>
-    <option value="">-- Select --</option>
-    <option>Male</option>
-    <option>Female</option>
-    <option>Other</option>
-  </select>
-
-  <label>Marital Status *</label>
-  <select name="maritalStatus" onchange="toggleOtherField(this, 'maritalOtherDiv')" required>
-    <option value="">-- Select --</option>
-    <option>Single</option>
-    <option>Married</option>
-    <option>Other</option>
-  </select>
-  <div id="maritalOtherDiv" style="display: none;">
-    <label>If Other, specify:</label>
-    <input type="text" name="maritalOther" />
-  </div>
-
-  <label>Citizenship *</label>
-  <select name="citizenship" onchange="toggleOtherField(this, 'citizenshipOtherDiv')" required>
-    <option value="">-- Select --</option>
-    <option>Malaysian</option>
-    <option>Singaporean</option>
-    <option>Other</option>
-  </select>
-  <div id="citizenshipOtherDiv" style="display: none;">
-    <label>If Other, specify:</label>
-    <input type="text" name="citizenshipOther" />
-  </div>
-
-  <div class="button-row">
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 2: Contact -->
-<div class="form-section">
-  <h2>Contact & Passport Info</h2>
-
-  <label>Email *</label>
-  <input type="email" name="email" required />
-
-  <label>Mobile Number *</label>
-  <input type="tel" name="mobile" required />
-
-  <label>Passport Number *</label>
-  <input type="text" name="passport" required />
-
-  <label>IC Number</label>
-  <input type="text" name="ic" />
-
-  <label>Address in Malaysia *</label>
-  <textarea name="address" rows="4" required></textarea>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 3: Bank & Job Info -->
-<div class="form-section">
-  <h2>Bank, Tax & Job Info</h2>
-
-  <label>Bank Name *</label>
-  <select name="bank" onchange="toggleOtherField(this, 'otherBankDiv')" required>
-    <option value="">-- Select --</option>
-    <option>Maybank</option>
-    <option>CIMB</option>
-    <option>Other</option>
-  </select>
-  <div id="otherBankDiv" style="display: none;">
-    <label>If Other, specify:</label>
-    <input type="text" name="bankOther" />
-  </div>
-
-  <label>Bank Account Number *</label>
-  <input type="text" name="bankAccount" required />
-
-  <label>Income Tax Number</label>
-  <input type="text" name="taxNumber" />
-
-  <label>Position Applied For *</label>
-<select name="positionApplied" onchange="toggleOtherField(this, 'positionOtherDiv')" required>
-  <option value="">-- Select Position --</option>
-  <option value="Software Engineer">Software Engineer</option>
-  <option value="Project Manager">Project Manager</option>
-  <option value="HR Executive">HR Executive</option>
-  <option value="Business Analyst">Business Analyst</option>
-  <option value="IT Support">IT Support</option>
-  <option value="Other">Other</option>
-</select>
-
-<div id="positionOtherDiv" style="display: none;">
-  <label>If Other, specify:</label>
-  <input type="text" name="positionOther" />
-</div>
-
-  
-  <label>Expected Joining Date *</label>
-  <input type="date" name="joiningDate" required />
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 4: Employment History -->
-<div class="form-section">
-  <h2>Employment History</h2>
-
-  <div id="employmentSection">
-    <div class="employment-block">
-      <label>Company Name *</label>
-      <input type="text" name="company[]" required />
-
-      <label>From *</label>
-      <input type="date" name="from[]" required />
-
-      <label>To *</label>
-      <input type="date" name="to[]" required />
-
-      <label>Position *</label>
-      <input type="text" name="jobTitle[]" required />
-
-      <label>Salary</label>
-      <input type="number" name="salary[]" />
-
-      <label>Reference Person</label>
-      <input type="text" name="refName[]" />
-
-      <label>Reference Contact</label>
-      <input type="text" name="refPhone[]" />
-    </div>
-  </div>
-  <button type="button" onclick="addEmployment()">+ Add More</button>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 5: Certifications -->
-<div class="form-section">
-  <h2>Certifications</h2>
-
-  <div id="certSection">
-    <div class="cert-block">
-      <label>Certification Title *</label>
-      <input type="text" name="certTitle[]" required />
-
-      <label>Issuer *</label>
-      <input type="text" name="certIssuer[]" required />
-
-      <label>Date Completed *</label>
-      <input type="date" name="certDate[]" required />
-
-      <label>Certificate Number</label>
-      <input type="text" name="certNumber[]" />
-    </div>
-  </div>
-  <button type="button" onclick="addCertification()">+ Add More</button>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 6: Education -->
-<div class="form-section">
-  <h2>Education</h2>
-
-  <div id="eduSection">
-    <div class="edu-block">
-      <label>Institution *</label>
-      <input type="text" name="eduSchool[]" required />
-
-      <label>Degree *</label>
-      <input type="text" name="eduDegree[]" required />
-
-      <label>Stream</label>
-      <input type="text" name="eduStream[]" />
-
-      <label>Year of Passing *</label>
-      <input type="text" name="eduYear[]" required />
-
-      <label>GPA</label>
-      <input type="text" name="eduGPA[]" />
-    </div>
-  </div>
-  <button type="button" onclick="addEducation()">+ Add More</button>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 7: Family -->
-<div class="form-section">
-  <h2>Family Members</h2>
-
-  <div id="familySection">
-    <div class="family-block">
-      <label>Name *</label>
-      <input type="text" name="familyName[]" required />
-
-      <label>Relationship *</label>
-      <input type="text" name="familyRelation[]" required />
-
-      <label>Date of Birth</label>
-      <input type="date" name="familyDOB[]" />
-
-      <label>Passport Number</label>
-      <input type="text" name="familyPassport[]" />
-
-      <label>Occupation</label>
-      <input type="text" name="familyOccupation[]" />
-    </div>
-  </div>
-  <button type="button" onclick="addFamily()">+ Add More</button>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 8: Emergency Contact -->
-<div class="form-section">
-  <h2>Emergency Contact</h2>
-
-  <label>Name *</label>
-  <input type="text" name="emergencyName" required />
-
-  <label>Relationship *</label>
-  <input type="text" name="emergencyRelation" required />
-
-  <label>Phone *</label>
-  <input type="tel" name="emergencyPhone" required />
-
-  <label>Address *</label>
-  <textarea name="emergencyAddress" rows="3" required></textarea>
-
-  <label>Location *</label>
-  <select name="emergencyLocation" required>
-    <option value="">-- Select --</option>
-    <option>Malaysia</option>
-    <option>Home Country</option>
-  </select>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 9: Office Use -->
-<div class="form-section">
-  <h2>Office Use Only</h2>
-
-  <label>Employee ID</label>
-  <input type="text" name="employeeID" />
-
-  <label>Department</label>
-  <input type="text" name="department" />
-
-  <label>Manager</label>
-  <input type="text" name="manager" />
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="button" onclick="nextSection()">Next</button>
-  </div>
-</div>
-
-<!-- SECTION 10: Final Submit -->
-<div class="form-section">
-  <h2>Review & Submit</h2>
-  <p>Please review all information before submitting your application.</p>
-
-  <div class="button-row">
-    <button type="button" onclick="prevSection()">Previous</button>
-    <button type="submit">Submit</button>
-  </div>
-</div>
+
+      <!-- SECTION 1 -->
+      <div class="form-section active">
+        <h2>Personal Particulars</h2>
+
+        <label>Full Name *</label>
+        <input type="text" name="fullName" required />
+
+        <label>Date of Birth *</label>
+        <input type="date" name="dob" required />
+
+        <label>Age *</label>
+        <input type="number" name="age" required />
+
+        <label>Gender *</label>
+        <select name="gender" required>
+          <option value="">-- Select --</option>
+          <option>Male</option>
+          <option>Female</option>
+          <option>Other</option>
+        </select>
+
+        <label>Marital Status *</label>
+        <select name="maritalStatus" onchange="toggleOtherField(this, 'maritalOtherDiv')" required>
+          <option value="">-- Select --</option>
+          <option>Single</option>
+          <option>Married</option>
+          <option>Other</option>
+        </select>
+        <div id="maritalOtherDiv" style="display: none;">
+          <label>If Other, specify:</label>
+          <input type="text" name="maritalOther" />
+        </div>
+
+        <label>Citizenship *</label>
+        <select name="citizenship" onchange="toggleOtherField(this, 'citizenshipOtherDiv')" required>
+          <option value="">-- Select --</option>
+          <option>Malaysian</option>
+          <option>Singaporean</option>
+          <option>Other</option>
+        </select>
+        <div id="citizenshipOtherDiv" style="display: none;">
+          <label>If Other, specify:</label>
+          <input type="text" name="citizenshipOther" />
+        </div>
+
+        <div class="button-row">
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 2 -->
+      <div class="form-section">
+        <h2>Contact & Passport Info</h2>
+
+        <label>Email *</label>
+        <input type="email" name="email" required />
+
+        <label>Mobile Number *</label>
+        <input type="tel" name="mobile" required />
+
+        <label>Passport Number *</label>
+        <input type="text" name="passport" required />
+
+        <label>IC Number</label>
+        <input type="text" name="ic" />
+
+        <label>Address in Malaysia *</label>
+        <textarea name="address" rows="4" required></textarea>
+
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- You can continue adding all other sections here like SECTION 3 to SECTION 9 -->
+
+      <!-- SECTION 10 -->
+      <div class="form-section">
+        <h2>Review & Submit</h2>
+        <p>Please review all information before submitting your application.</p>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="submit">Submit</button>
+        </div>
+      </div>
 
     </form>
   </div>
+
   <div class="form-logo">
     <img src="logo.png" alt="Company Logo" />
   </div>
