--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Employee Registration Form</title>
+  <title>Employment Form</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <div class="form-wrapper">
+  <!-- Left Form Panel -->
   <div class="form-container">
+    <!-- Progress Bar -->
     <div class="progress-bar">
-      <div class="progress" id="progress" style="width: 10%;"></div>
+      <div class="progress" id="progress"></div>
     </div>
 
     <form id="multiStepForm">
-
-      <!-- SECTION 1 -->
+      <!-- SECTION 1: Personal Particulars -->
       <div class="form-section active">
         <h2>Personal Particulars</h2>
-
         <label>Full Name *</label>
         <input type="text" name="fullName" required />
 
@@ -43,7 +43,7 @@
           <option>Married</option>
           <option>Other</option>
         </select>
-        <div id="maritalOtherDiv" style="display: none;">
+        <div id="maritalOtherDiv" style="display:none">
           <label>If Other, specify:</label>
           <input type="text" name="maritalOther" />
         </div>
@@ -55,7 +55,7 @@
           <option>Singaporean</option>
           <option>Other</option>
         </select>
-        <div id="citizenshipOtherDiv" style="display: none;">
+        <div id="citizenshipOtherDiv" style="display:none">
           <label>If Other, specify:</label>
           <input type="text" name="citizenshipOther" />
         </div>
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <!-- SECTION 2 -->
+      <!-- SECTION 2: Contact -->
       <div class="form-section">
         <h2>Contact & Passport Info</h2>
 
@@ -90,9 +90,189 @@
         </div>
       </div>
 
-      <!-- You can continue adding all other sections here like SECTION 3 to SECTION 9 -->
+      <!-- SECTION 3: Bank & Job Info -->
+      <div class="form-section">
+        <h2>Bank, Tax & Job Info</h2>
 
-      <!-- SECTION 10 -->
+        <label>Bank Name *</label>
+        <select name="bank" onchange="toggleOtherField(this, 'otherBankDiv')" required>
+          <option value="">-- Select --</option>
+          <option>Maybank</option>
+          <option>CIMB</option>
+          <option>Other</option>
+        </select>
+        <div id="otherBankDiv" style="display:none">
+          <label>If Other, specify:</label>
+          <input type="text" name="bankOther" />
+        </div>
+
+        <label>Bank Account Number *</label>
+        <input type="text" name="bankAccount" required />
+
+        <label>Income Tax Number</label>
+        <input type="text" name="taxNumber" />
+
+        <label>Position Applied For *</label>
+        <select name="positionApplied" onchange="toggleOtherField(this, 'positionOtherDiv')" required>
+          <option value="">-- Select Position --</option>
+          <option>Software Engineer</option>
+          <option>Project Manager</option>
+          <option>HR Executive</option>
+          <option>Business Analyst</option>
+          <option>IT Support</option>
+          <option>Other</option>
+        </select>
+        <div id="positionOtherDiv" style="display:none">
+          <label>If Other, specify:</label>
+          <input type="text" name="positionOther" />
+        </div>
+
+        <label>Expected Joining Date *</label>
+        <input type="date" name="joiningDate" required />
+
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 4: Employment History -->
+      <div class="form-section">
+        <h2>Employment History</h2>
+        <div id="employmentSection">
+          <div class="employment-block">
+            <label>Company Name *</label>
+            <input type="text" name="company[]" required />
+            <label>From *</label>
+            <input type="date" name="from[]" required />
+            <label>To *</label>
+            <input type="date" name="to[]" required />
+            <label>Position *</label>
+            <input type="text" name="jobTitle[]" required />
+            <label>Salary</label>
+            <input type="number" name="salary[]" />
+            <label>Reference Person</label>
+            <input type="text" name="refName[]" />
+            <label>Reference Contact</label>
+            <input type="text" name="refPhone[]" />
+          </div>
+        </div>
+        <button type="button" onclick="addEmployment()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 5: Certifications -->
+      <div class="form-section">
+        <h2>Certifications</h2>
+        <div id="certSection">
+          <div class="cert-block">
+            <label>Certification Title *</label>
+            <input type="text" name="certTitle[]" required />
+            <label>Issuer *</label>
+            <input type="text" name="certIssuer[]" required />
+            <label>Date Completed *</label>
+            <input type="date" name="certDate[]" required />
+            <label>Certificate Number</label>
+            <input type="text" name="certNumber[]" />
+          </div>
+        </div>
+        <button type="button" onclick="addCertification()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 6: Education -->
+      <div class="form-section">
+        <h2>Education</h2>
+        <div id="eduSection">
+          <div class="edu-block">
+            <label>Institution *</label>
+            <input type="text" name="eduSchool[]" required />
+            <label>Degree *</label>
+            <input type="text" name="eduDegree[]" required />
+            <label>Stream</label>
+            <input type="text" name="eduStream[]" />
+            <label>Year of Passing *</label>
+            <input type="text" name="eduYear[]" required />
+            <label>GPA</label>
+            <input type="text" name="eduGPA[]" />
+          </div>
+        </div>
+        <button type="button" onclick="addEducation()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 7: Family -->
+      <div class="form-section">
+        <h2>Family Members</h2>
+        <div id="familySection">
+          <div class="family-block">
+            <label>Name *</label>
+            <input type="text" name="familyName[]" required />
+            <label>Relationship *</label>
+            <input type="text" name="familyRelation[]" required />
+            <label>Date of Birth</label>
+            <input type="date" name="familyDOB[]" />
+            <label>Passport Number</label>
+            <input type="text" name="familyPassport[]" />
+            <label>Occupation</label>
+            <input type="text" name="familyOccupation[]" />
+          </div>
+        </div>
+        <button type="button" onclick="addFamily()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 8: Emergency Contact -->
+      <div class="form-section">
+        <h2>Emergency Contact</h2>
+        <label>Name *</label>
+        <input type="text" name="emergencyName" required />
+        <label>Relationship *</label>
+        <input type="text" name="emergencyRelation" required />
+        <label>Phone *</label>
+        <input type="tel" name="emergencyPhone" required />
+        <label>Address *</label>
+        <textarea name="emergencyAddress" rows="3" required></textarea>
+        <label>Location *</label>
+        <select name="emergencyLocation" required>
+          <option value="">-- Select --</option>
+          <option>Malaysia</option>
+          <option>Home Country</option>
+        </select>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 9: Office Use -->
+      <div class="form-section">
+        <h2>Office Use Only</h2>
+        <label>Employee ID</label>
+        <input type="text" name="employeeID" />
+        <label>Department</label>
+        <input type="text" name="department" />
+        <label>Manager</label>
+        <input type="text" name="manager" />
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+      <!-- SECTION 10: Final Submit -->
       <div class="form-section">
         <h2>Review & Submit</h2>
         <p>Please review all information before submitting your application.</p>
@@ -101,15 +281,16 @@
           <button type="submit">Submit</button>
         </div>
       </div>
-
     </form>
   </div>
 
+  <!-- Right: Logo -->
   <div class="form-logo">
     <img src="logo.png" alt="Company Logo" />
   </div>
 </div>
 
+<!-- JavaScript -->
 <script src="script.js"></script>
 </body>
 </html>
