--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
         <div class="button-row">
           <button type="button" onclick="prevSection()">Previous</button>
           <button type="submit">Submit</button>
+          <button type="button" onclick="submitOrUpdateForm(true)">Update</button>
         </div>
       </div>
     </form>
