--- a/index.html
+++ b/index.html
@@ -273,14 +273,15 @@
       </div>
 
       <!-- SECTION 10: Final Submit -->
-      <div class="form-section">
-        <h2>Review & Submit</h2>
-        <p>Please review all information before submitting your application.</p>
-        <div class="button-row">
-          <button type="button" onclick="prevSection()">Previous</button>
-          <button type="submit">Submit</button>
-      </div>
-      </div>
+<div class="form-section">
+  <h2>Review & Submit</h2>
+  <p>Please review all information before submitting your application.</p>
+  <div class="button-row">
+    <button type="button" onclick="prevSection()">Previous</button>
+    <button type="submit" id="submitBtn">Submit</button>
+  </div>
+</div>
+
     </form>
   </div>
 
